--- a/page.sass
+++ b/page.sass
@@ -1,7 +1,19 @@
+*
+	padding: 0
+	margin: 0
+
 body
-    background-color: yellow
-    min-width: 320px
-    font-family: Roboto
+	background-color: yellow
+	min-width: 320px
+	font-family: Roboto
 
 h1
-    font-size: 50px
+	font-size: 50px
+	color: red
+
+.container
+	max-width: 1024px
+	margin: 0 auto
+
+header
+	background-color: rgba(214, 83, 83, 0.5)
