--- a/fill-vertical-space.css
+++ b/fill-vertical-space.css
@@ -1,11 +1,48 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html,
 body {
   height: 100%;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.7;
+}
+
+li {
+  list-style-type: none;
+  padding-right: 20px;
+}
+
+li a {
+  color: red;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: bold;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+}
+
+.vert-menu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 150px;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(200, 150, 69, 0.7);
+  padding: 6px;
 }
 
 .container {
@@ -45,13 +82,16 @@ body {
 
 .container .box-2 {
   background-color: blue;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  padding-left: 250px;
+  padding-right: 250px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0;
+          flex: 0;
 }
 
 .container .box-design {
   background-color: yellow;
+  color: blue;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -59,47 +99,8 @@ body {
 
 .container .box-3 {
   background-color: red;
-  height: 60px;
-}
-
-ul {
-  background-color: rgba(223, 41, 41, 0.5);
-}
-
-li {
-  list-style-type: none;
-}
-
-.vert-menu {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 80px;
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  z-index: 1;
-}
-
-.vert-menu ul {
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-flex: 0;
+      -ms-flex: 0;
+          flex: 0;
 }
 /*# sourceMappingURL=fill-vertical-space.css.map */
